Adding instructions for the new OMP publishing process to the step-by-step workshop creation guide. (#565)
* Adding EL9 updates to the noVNC lab.

* General maintenance on the noVNC lab.

* Update 6-labs-setup-graphical-remote-desktop.md

* Updates to shared ADB provisioning instructions.

* Update provision-body-developer.md

* Updating the 'Verify Compute Instance' lab.

* Updating the CSS and JS files to support the LiveSQL x Sprints integration

* Revert "Updating the CSS and JS files to support the LiveSQL x Sprints integration"

This reverts commit d45f8aff7c13c444906ba5625b55dcfa92990365.

* Updating the CSS and JS files to support the LiveSQL x Sprints integration

* Adding templates for Live SQL enabled sprints.

* Adding templates for Live SQL enabled sprints.

* Fiing the LiveSQL tag references.

* LiveSQL to Live SQL

* Updating the LiveLabs image upload instructions.

* Refining the marketplace image creation instructions.

* Update 8-labs-publish-custom-image-to-marketplace.md

* Updating the documentation for the new Marketplace process.

* Update 8-labs-publish-custom-image-to-marketplace.md

* Update manifest.json

* Updating the OMP instructions.

* Image optimization and small fixes.

* Adding New Image Instructions to the Step-by-Step workshop

--- a/sample-livelabs-templates/create-labs/labs/workshops/livelabs/manifest.json
+++ b/sample-livelabs-templates/create-labs/labs/workshops/livelabs/manifest.json
@@ -87,14 +87,24 @@
         "filename": "./../../10-labs-create-sprints-workflow/10-create-sprints-workflow.md"
     },
     {
-        "title": "Lab 10a: Setup graphical remote desktop",
+        "title": "Lab 10a: Setup Graphical Remote Desktop",
         "description": "This lab will describe how to create and use a graphical remote desktop for your workshop.",
         "filename": "./../../6-labs-setup-graphical-remote-desktop/6-labs-setup-graphical-remote-desktop.md"
     },
     {
-        "title": "Lab 10b: Create custom image for marketplace",
+        "title": "Lab 10b: Create Custom Image for Marketplace",
         "description": "This lab will describe how to create and use a marketplace image for your workshop.",
         "filename": "./../../7-labs-create-custom-image-for-marketplace/7-labs-create-custom-image-for-marketplace.md"
+    },
+    {
+      "title": "Lab 10c: Publish Your Image to Oracle Marketplace",
+      "description": "This lab will show you how to publish your image to Oracle Marketplace.",
+      "filename": "./../../8-labs-publish-custom-image-to-marketplace/8-labs-publish-custom-image-to-marketplace.md"
+    },
+    {
+      "title": "Lab 10d: Update the Image on Your Sandbox Environment",
+      "description": "This lab will show you how to get your new Marketplace image added to your LiveLab.",
+      "filename": "./../../12-add-custom-image-to-workshop/12-add-custom-image-to-workshop.md"
     }
   ]
 }
