--- a/sample-livelabs-templates/create-labs/labs/workshops/marketplace/manifest.json
+++ b/sample-livelabs-templates/create-labs/labs/workshops/marketplace/manifest.json
@@ -13,7 +13,7 @@
       "filename": "./../../8-labs-publish-custom-image-to-marketplace/8-labs-publish-custom-image-to-marketplace.md"
     },
     {
-      "title": "Lab 3: Add Your Marketplace Image to Your LiveLab",
+      "title": "Lab 3: Update the Image on Your Sandbox Environment",
       "description": "This lab will show you how to get your new Marketplace image added to your LiveLab.",
       "filename": "./../../12-add-custom-image-to-workshop/12-add-custom-image-to-workshop.md"
     },
